apps/cyberstorm-remix/app/p/tabs/Wiki/Wiki.css
@layer nimbus-layout {
  .package-wiki__skeleton {
    height: 500px;
  }

  .package-wiki {
    display: flex;
    gap: 2rem;
    align-items: flex-start;
    align-self: stretch;
  }

  .package-wiki-nav__skeleton {
    height: 300px;
  }

  .package-wiki-nav {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: flex-start;
    align-self: stretch;
    width: 12rem;
  }

  .package-wiki-nav__header {
    display: flex;
    gap: 1rem;
    align-items: center;
    align-self: stretch;
  }

  .package-wiki-nav__section {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-self: stretch;
  }

  .package-wiki-nav__list {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    align-items: flex-start;
    align-self: stretch;

    > .button {
      align-self: stretch;
      justify-content: flex-start;
    }

    > .package-wiki-nav__unselected {
      color: var(--color-text-accent);
      font-weight: var(--font-weight-regular);

      &:hover {
        color: var(--color-text-primary);
      }
    }
  }

  .package-wiki-content {
    display: flex;
    flex: 1 0 0;
    flex-direction: column;
    gap: 1.5rem;
    align-items: flex-start;
  }

  .package-wiki-content__header {
    display: flex;
    gap: 2rem;
    align-items: flex-start;
    align-self: stretch;
  }

  .package-wiki-content__actions {
    display: flex;
    gap: 1rem;
    align-items: flex-end;
  }

  .package-wiki-content__title {
    display: flex;
    flex: 1 0 0;
    flex-direction: column;
    gap: 0.25rem;
    align-items: flex-start;
  }

  .package-wiki-content__meta {
    display: flex;
    gap: 0.75rem;
    align-items: flex-start;
    color: var(--color-text-tertiary);
    font-weight: var(--font-weight-regular);
    font-size: var(--font-size-body-md);
    line-height: var(--line-height-md);
  }

  .package-wiki-content__meta-date {
    display: flex;
    gap: 0.5rem;
    align-items: center;
  }

  .package-wiki-content__body {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: flex-start;
    align-self: stretch;
  }

  .package-wiki-content__footer {
    display: flex;
    gap: 2rem;
    align-items: center;
    align-self: stretch;
    justify-content: center;
    padding-top: 3rem;

    > .button {
      flex: 1 0 0;
      color: var(--color-text-secondary);

      &:hover {
        color: var(--color-text-primary);
      }
    }
  }

  .package-wiki-content__page-button {
    color: var(--color-text-accent);
    font-weight: var(--font-weight-bold);
    font-size: var(--font-size-body-md);
    line-height: var(--line-height-auto);
  }

  .package-wiki-edit__tabs-button {
    background-color: transparent;
  }
}

